[package]
name = "kalman-rust"
repository = "https://github.com/LdDl/kalman-rs"
readme = "README.md"
keywords = ["computer-vision", "kalman", "tracking", "filtering"]
license = "MIT"
version = "0.2.0"
edition = "2021"
authors = ["Dimitrii Lopanov <sexykdi@gmail.com>"]
exclude = ["/.github", "/ci", "/tools", "release.toml", "rustfmt.toml"]
description = "Dead simple implementation of Discrete Kalman filter for object tracking purposes"
homepage = "https://github.com/LdDl/kalman-rs"
documentation = "https://docs.rs/kalman-rs"
categories = ["algorithms", "computer-vision", "mathematics", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.1" 
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8" }